another simple node module of qrcode

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "passport-facebook":"*",
     "connect-flash":"*",
     "log4js":"*",
-    "qrcode":"*",
+    "qr-image":"*",
     "request":"*"
   }
 }
