--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport":"*",
     "passport-local":"*",
     "passport-facebook":"*",
+    "passport-facebook-token":"*",
     "connect-flash":"*",
     "log4js":"*",
     "qr-image":"*",
